# CPEncoder

./: CMakeLists.txt  README.md
CMakeModules/: CPEncoderConfig.cmake.in  CPEncoderVersion.cmake.in
ColorPrecision/: CMakeLists.txt
ColorPrecision/include/CPEncoder/: CPCompressor.h
ColorPrecision/src/: Compressor.cpp  Decompressor.cpp
